--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <style>
+        canvas {
+            border: 1px solid black;
+        }
+    </style>
+</head>
+
 <body>
-<p>Hello World</p>
+    <p>Hello World</p>
+    <canvas id="canvas" width=450 height=450></canvas>
+	<script src="grid.js"></script>
 </body>
 </html>
