let the user update the rule

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <label for="offToOn">Off to On:</label>
     <input type="text" id="offToOn" value="3">
     <label for="onToOff">On to Off:</label>
-    <input type="text" id="onToOff" value="0-1,4-8">
+    <input type="text" id="onToOff" value="0,1,4,5,6,7,8">
     <br>
     <button id="pauseButton" class="symbolButton">&#x23F8;</button>
     <button id="speedButton1" class="symbolButton">&#x23F5;</button>
