last minute style changes

--- a/help.html
+++ b/help.html
@@ -12,7 +12,9 @@
     field should contain the list of possible neighbour counts that turn a
     state 0 cell into a state 1 cell and a state 1 cell into a state 0 cell,
     respectively. Seperate the counts by commas. You can also use a hyphen
-    to list a range of numbers.
+    to list a range of numbers. You can also increase the number of possible 
+    cell states; this will increase the number of transition rules proportionally.
+    Be aware that changing the number of states clears the current rule.
     You'll have to reset the field for the changes to take effect.</p>
 </body>
 </html>
