--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <a href="help.html">Help.</a>
+<body style="text-align:center">
+    <h1>Cellular Automata Creator</h1>
+    <a href="help.html" style="font-size:24px">Help.</a> <br />
     <br>
     <label for="gridWidth">Grid width:</label>
     <input type="number" id="gridWidth" value="450">
@@ -13,6 +14,7 @@
     <input type="number" id="gridHeight" value="450">
     <label for="states">Number of Cell States:</label>
     <input type="number" id="states" value="2">
+    <br />
     <br>
     <div id="ruleDiv">
         <label for="0To1">0 to 1:</label>
